# Errander-AI

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  RUN.md  SETUP-Win-Controller.md  SETUP.md  STATUS.md  ai_sre_audit.md  ai_sre_audit_v2.md  ai_sre_implementation_plan.md  ai_sre_recommendations.md  ai_sre_recommendations_validation.md  ai_sre_remediation_plan.md  ai_sre_ui_audit.md  configure.sh  docker-compose.yml  fable.md  future-enhancements.md  pyproject.toml
.github/workflows/: ci.yml
automaint/: __init__.py  main.py
automaint/agent/: __init__.py  decisions.py  graph.py  state.py  vm_graph.py
automaint/config/: __init__.py  inventory.py  policies.py  schema.py  settings.py
automaint/execution/: commands.py  os_detection.py  sandbox.py  ssh.py
automaint/integrations/: __init__.py  llm.py  secrets.py  slack.py
automaint/models/: __init__.py  actions.py  events.py  plans.py
automaint/observability/: metrics.py  reporting.py  tracking.py
automaint/safety/: approval.py  audit.py  locking.py  rollback.py  validators.py
automaint/scheduling/: __init__.py  scheduler.py  windows.py
config/: inventory.yaml  policies.yaml  settings.yaml
deploy/: .env.agent.example  .env.web.example  errander-agent.service  errander-web.service  nginx-mode2.conf.example  postgres-setup.sql
deploy/postgres-init/: 01-create-test-db.sql
deploy/vllm/: .env.example  docker-compose.yml
docs/: AI-ARCHITECTURE.md  LLM-PROVIDERS.md  MONITORING-VALIDATION.md  OBSERVABILITY.md  SECRETS.md  SECURITY.md  SETUP.md  SPEC.md  architecture-options.md  command-log.md  langgraph-primer.md
docs/diagrams/: detect-and-propose.md  errander-system-architecture.drawio  errander-system-architecture.md  errander-view.html  investigation-agent-dashboard-chat.md
docs/learning/: 01-project-scaffold.md  02-settings-loader.md  03-core-infrastructure.md  04-disk-cleanup-subgraph.md  05-vm-graph.md  06-batch-orchestrator.md  07-llm-client.md  08-slack-approval.md  09-metrics.md  10-scheduling.md  11-sqlite-audit.md  12-web-ui.md  13-vllm-setup.md  (+61 more)
errander/: __init__.py  __main__.py  main.py
example/: inventory.yaml  settings.yaml
scripts/: add-target.sh  bootstrap.ps1  bootstrap.sh  browse_ui.py  capture_ui_screenshots.py  configure.sh  dev_ui.py  install-docker-wrappers-v2.sh  install-docker-wrappers.sh  install-grafana.sh  install-prometheus.sh  install-systemctl-restart-wrapper.sh  install.sh  teardown.sh
tasks/: ai-trust-layer-implementation-plan.md  dashboard-chat-implementation-plan.md  fable-plan.md  investigation-agent-implementation-plan.md  lessons.md  phase-1.8-validation-checklist.md  phase4-llm-flexibility-and-ui-config.md  post-review-implementation-plan.md  post-review-session-flow.md  sonnet-phase-a-plan.md  todo.md  v1-action-opt-in-and-conditional-setup-plan.md
tests/: conftest.py  test_approval_reconciler.py  test_main.py  test_main_ask.py  test_main_probe.py  test_proposal_reconciler.py
(+290 files in other folders)
