[project]
name = "errander-ai"
version = "0.1.0"
description = "Autonomous maintenance agent for heterogeneous VM infrastructure"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "openai>=1.0",
    "asyncssh>=2.17",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
    "structlog>=24.0",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
errander = "errander.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# web/ files contain inline HTML/CSS template strings that cannot be split
# without harming readability. E501 is exempt for these template files only.
"errander/web/*.py" = ["E501"]
# Test files: TCH rules cause false positives for pytest fixture injection
# (pytest resolves annotations at runtime via get_type_hints).
"tests/**/*.py" = ["TCH"]
"scripts/**/*.py" = ["E501", "UP017"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# APScheduler has no type stubs — third-party library
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["errander"]
